--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
                       <div id="testing-doing-list" class="story-list" data-column-id="testing-doing"></div>
                   </div>
                   <div class="sub-column" id="testing-done-list-container">
-                       <h4>Done (Ready to Publish)</h4> {/* UPDATED */}
+                       <h4>Done (Ready to Publish)</h4>
                        <div id="testing-done-list" class="story-list" data-column-id="testing-done"></div>
                   </div>
             </div>
 
             <!-- Final "Publish" Column -->
             <div class="kanban-column" id="col-done"> {/* ID remains 'col-done' for JS consistency */}
-                <h3>Publish</h3> {/* UPDATED */}
+                <h3>Publish</h3> 
                 <div id="done-list" class="story-list" data-column-id="done"></div>
             </div>
         </section>
@@ -370,7 +370,7 @@
 
     <dialog id="sprint-review-modal">
         <h2>Sprint <span class="modal-sprint-number">1</span> Review</h2>
-        <h3>Published Stories:</h3> {/* UPDATED */}
+        <h3>Published Stories:</h3> 
         <ul id="review-completed-list"></ul>
         <p>Velocity (Points Completed): <span id="review-velocity">0</span></p>
         <p>Value Delivered: <span id="review-value">0</span> stars</p>
