--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
 
             <!-- Final "Publish" Column -->
-            <div class="kanban-column" id="col-done"> {/* ID remains 'col-done' for JS consistency */}
+            <div class="kanban-column" id="col-done"> 
                 <h3>Publish</h3> 
                 <div id="done-list" class="story-list" data-column-id="done"></div>
             </div>
