--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <h3>Game Goal</h3>
         <ul>
-            <li>Complete as many <strong>User Stories</strong> (parts of the book) as possible by moving them to the final <strong>"Publish"</strong> column.</li> {/* MODIFIED */}
+            <li>Complete as many <strong>User Stories</strong> (parts of the book) as possible by moving them to the final <strong>"Publish"</strong> column.</li> 
             <li>Meet your chosen <strong>Definition of Done (DoD)</strong> by completing specific required stories by the end of Sprint 3 for bonus points.</li>
             <li>Higher <strong>Value</strong> (⭐) stories contribute more to the final "quality" of the storybook.</li>
         </ul>
@@ -131,7 +131,7 @@
              <strong>3. Work Day 1 Simulation:</strong>
              <ul>
                  <li>Workers automatically apply points to assigned stories in 'In Progress (Doing)' or 'Testing (Doing)'.</li>
-                 <li>Progress bars update. Stories finishing Development move to <strong>'In Progress (Done)'</strong> (Devs unassigned). Stories finishing Testing move to <strong>'Testing (Done)'</strong> (Testers unassigned), then automatically to the final <strong>"Publish"</strong> column.</li> {/* MODIFIED */}
+                 <li>Progress bars update. Stories finishing Development move to <strong>'In Progress (Done)'</strong> (Devs unassigned). Stories finishing Testing move to <strong>'Testing (Done)'</strong> (Testers unassigned), then automatically to the final <strong>"Publish"</strong> column.</li>
              </ul>
          </div>
          <div class="phase-step">
@@ -155,13 +155,13 @@
              <strong>5. Work Day Simulation (Days 2-5):</strong>
              <ul>
                  <li>Workers apply points. Progress updates.</li>
-                 <li>Transitions: 'In Progress (Doing)' -> 'In Progress (Done)', 'Testing (Doing)' -> 'Testing (Done)' -> 'Publish'.</li> {/* MODIFIED */}
+                 <li>Transitions: 'In Progress (Doing)' -> 'In Progress (Done)', 'Testing (Doing)' -> 'Testing (Done)' -> 'Publish'.</li>
              </ul>
          </div>
          <div class="phase-step">
              <strong>6. Sprint Review (End of Sprint):</strong>
              <ul>
-                 <li>See completed stories (from final 'Publish' column), Velocity, Value, Cycle Time.</li> {/* MODIFIED */}
+                 <li>See completed stories (from final 'Publish' column), Velocity, Value, Cycle Time.</li> 
                  <li>View storybook preview. Get Feedback & DoD progress.</li>
                  <li><strong>Action:</strong> Click "Proceed to Retrospective".</li>
              </ul>
@@ -176,11 +176,11 @@
 
         <h3>Key Concepts</h3>
         <ul>
-            <li><strong>Kanban Columns & Sub-Columns:</strong> Visualizes workflow: Ready -> In Progress (Doing -> Done) -> Testing (Doing -> Done) -> Publish (Final).</li> {/* MODIFIED */}
+            <li><strong>Kanban Columns & Sub-Columns:</strong> Visualizes workflow: Ready -> In Progress (Doing -> Done) -> Testing (Doing -> Done) -> Publish (Final).</li> 
             <li><strong>WIP Limits:</strong> Apply *only* to the 'Doing' sub-columns (In Progress and Testing). This prevents bottlenecks while allowing completed work (in 'Done' sub-columns) to wait. Shown as (X/Y Doing).</li>
             <li><strong>Multi-Assignment:</strong> Assign multiple Devs ('In Progress (Doing)') or Testers ('Testing (Doing)').</li>
-             <li><strong>Flow:</strong> Stories must complete Dev ('In Progress (Done)') before Testing can start. Assigning a Tester to an 'In Progress (Done)' story pulls it into 'Testing (Doing)'. Finished testing goes to 'Testing (Done)', then automatically to the final 'Publish' column.</li> {/* MODIFIED */}
-             <li><strong>Blockers/Obstacles/Aging/Cycle Time:</strong> Function similarly, but relate to work in the 'Doing' states. Aging in 'Done' sub-columns indicates downstream delays. Cycle Time measures duration until entering 'Publish'.</li> {/* MODIFIED */}
+             <li><strong>Flow:</strong> Stories must complete Dev ('In Progress (Done)') before Testing can start. Assigning a Tester to an 'In Progress (Done)' story pulls it into 'Testing (Doing)'. Finished testing goes to 'Testing (Done)', then automatically to the final 'Publish' column.</li> 
+             <li><strong>Blockers/Obstacles/Aging/Cycle Time:</strong> Function similarly, but relate to work in the 'Doing' states. Aging in 'Done' sub-columns indicates downstream delays. Cycle Time measures duration until entering 'Publish'.</li> 
         </ul>
 
         <h3>Tips for Success</h3>
@@ -305,7 +305,7 @@
          <ul>
              <li><strong>Visualize Workflow:</strong> Use the Kanban board with its columns and sub-columns (Doing/Done) to see work progress.</li>
              <li><strong>Limit Work-In-Progress (WIP):</strong> Apply limits *only* to the 'Doing' sub-columns (In Progress & Testing). This improves flow by preventing bottlenecks while allowing finished stages to wait.</li>
-             <li><strong>Manage Flow:</strong> Aim for smooth movement. Stories must finish Dev ('In Progress (Done)') before Testing starts. Assigning a Tester pulls work into 'Testing (Doing)'. Finished testing goes to 'Testing (Done)', then automatically to the final 'Publish' column.</li> {/* MODIFIED */}
+             <li><strong>Manage Flow:</strong> Aim for smooth movement. Stories must finish Dev ('In Progress (Done)') before Testing starts. Assigning a Tester pulls work into 'Testing (Doing)'. Finished testing goes to 'Testing (Done)', then automatically to the final 'Publish' column.</li> 
              <li><strong>Make Policies Explicit:</strong> Understand WIP limits, how work moves between sub-columns, how blockers are handled.</li>
              <li><strong>Implement Feedback Loops:</strong> Use Daily Scrums, Reviews, Retrospectives to inspect and adapt.</li>
          </ul>
@@ -313,7 +313,7 @@
          <ul>
              <li><strong>WIP Limits:</strong> Displayed on column headers (e.g., "WIP: 1/5 Doing"). Only count stories in 'In Progress (Doing)' and 'Testing (Doing)'. Assigning work will be blocked if it tries to move a story into a 'Doing' sub-column that is full.</li>
               <li><strong>WIP Aging:</strong> Shows days in the current 'Doing' or 'Done' sub-column. High age in 'Doing' might indicate a problem. High age in a 'Done' sub-column indicates a downstream bottleneck.</li>
-              <li><strong>Cycle Time:</strong> Average work days from starting 'In Progress (Doing)' to entering the final 'Publish' column.</li> {/* MODIFIED */}
+              <li><strong>Cycle Time:</strong> Average work days from starting 'In Progress (Doing)' to entering the final 'Publish' column.</li> 
              <li><strong>Blockers:</strong> Block stories in 'Doing' sub-columns. Assign a Senior Developer to unblock (costs 1 pt).</li>
              <li><strong>Multi-Assignment:</strong> Assign multiple workers to stories in 'Doing' sub-columns.</li>
          </ul>
